# Dnd_TIH

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  backup.sh  docker-compose.yml  requirements.txt  restore.sh  shutdown.sh
back/: Dockerfile.back  app.py  models.py
front/: Dockerfile.front  host.html  index.html  player.html  player_create.html  pubspec.yaml
front/lib/: main.dart
front/lib/models/: player.dart
front/lib/screens/: home_screen.dart  host_screen.dart  player_create_screen.dart  player_screen.dart
front/lib/services/: api_service.dart
front/web/: index.html  manifest.json
src/: auth.rs  db.rs  main.rs  models.rs  ws.rs
src/routes/: auth.rs  host.rs  mod.rs  player.rs  ws_handler.rs
static/: host.html  index.html  player.html
static/css/: style.css
static/js/: host.js  main.js  player.js
