[package]
name = "dnd_tih"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["ws", "macros"] }
axum-extra      = { version = "0.9", features = ["cookie"] }
tokio           = { version = "1", features = ["full"] }
tower-http      = { version = "0.5", features = ["fs"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
sqlx            = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
bcrypt          = "0.15"
uuid            = { version = "1", features = ["v4"] }
chrono          = { version = "0.4", features = ["serde"] }
rand            = "0.8"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
futures-util    = "0.3"
